--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<hr>
+	<hr size="500" color="red">
 	<h1><strong>This is the Starting Page of Jersey</strong></h1>
 	<hr>
 </body>
